# chat_mypdf

./: .gitignore  Dockerfile  README.md  pyproject.toml
health_supplements_store/: index.faiss  index.pkl
src/: .env  app.py  base_chatbot.py  chat_bot_history.py  chat_pdf.py
